--- a/css/purple/style.css
+++ b/css/purple/style.css
@@ -1,6 +1,86 @@
 /* Eric Meyer's CSS Reset */
 
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
     margin: 0;
     padding: 0;
     border: 0;
@@ -9,24 +89,39 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     vertical-align: baseline;
 }
 
+
 /* HTML5 display-role reset for older browsers */
 
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
     display: block;
 }
 
-body {
-}
+body {}
 
-ol, ul {
+ol,
+ul {
     list-style: none;
 }
 
-blockquote, q {
+blockquote,
+q {
     quotes: none;
 }
 
-blockquote:before, blockquote:after, q:before, q:after {
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
     content: '';
     content: none;
 }
@@ -36,49 +131,64 @@ table {
     border-spacing: 0;
 }
 
+
 /* End of Eric Meyer's CSS Reset */
+
 
 /*
 ***********************BASE***********************************************
 */
+
 @import url('https://fonts.googleapis.com/css?family=PT+Sans:400,700');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&subset=cyrillic');
+
 /***********************animatedBackground***********************************************/
+
 @keyframes animatedBackground {
-  0 {
-      background-position: 0 0
-  }
-  100% {
-      background-position: 600px 0px
-  }
+    0 {
+        background-position: 0 0
+    }
+    100% {
+        background-position: 600px 0px
+    }
 }
+
+
 /* Mozilla Firefox 5.0+ */
+
 @-moz-keyframes animatedBackground {
-  0 {
-      background-position: 0 0
-  }
-  100% {
-      background-position: 600px 0px
-  }
+    0 {
+        background-position: 0 0
+    }
+    100% {
+        background-position: 600px 0px
+    }
 }
+
+
 /* Safari 4.0+, Chrome 4.0+ */
+
 @-webkit-keyframes animatedBackground {
-  0 {
-      background-position: 0 0
-  }
-  100% {
-      background-position: 600px 0px
-  }
+    0 {
+        background-position: 0 0
+    }
+    100% {
+        background-position: 600px 0px
+    }
 }
+
+
 /* Opera 12.0+ */
+
 @-o-keyframes animatedBackground {
-  0 {
-      background-position: 0 0
-  }
-  100% {
-      background-position: 600px 0px
-  }
+    0 {
+        background-position: 0 0
+    }
+    100% {
+        background-position: 600px 0px
+    }
 }
+
 body {
     /*font-family: 'PT Sans', sans-serif;*/
     font-family: 'Open Sans', sans-serif;
@@ -111,8 +221,14 @@ body {
     padding-bottom: 40px;
 }
 
+
 /***********************FONTS***********************************************/
-h1, h2, h3, h4, p {
+
+h1,
+h2,
+h3,
+h4,
+p {
     padding-bottom: 1rem;
 }
 
@@ -150,7 +266,9 @@ li a {
     color: white;
 }
 
+
 /***********************NAVBAR***********************************************/
+
 .navbar {
     /*height: 60px;*/
     border: none;
@@ -158,8 +276,6 @@ li a {
     -webkit-backdrop-filter: brightness(1.5) blur(10px);
     backdrop-filter: brightness(1.5) blur(10px);
 }
-
-
 
 .nav {
     padding-top: 0.4rem;
@@ -175,17 +291,18 @@ li a {
     font-weight: 400;
 }
 
-
 #myNavbar a:hover {
     color: #A35DB4;
 }
 
-.navbar-nav li.active a{
+.navbar-nav li.active a {
     color: rgba(42, 42, 42, 0.6) !important;
     background-color: rgba(255, 255, 255, 0) !important;
 }
 
+
 /***********************MAIN***********************************************/
+
 .container-fluid-main {
     background: #461243 url("../../img/purple/main.jpg") no-repeat 50% 50% fixed;
     background-size: cover;
@@ -194,6 +311,7 @@ li a {
 .container-main {
     padding-top: 15%;
 }
+
 
 /***********************BUTTONS AND LINKS***********************************************/
 
@@ -241,7 +359,9 @@ button.mobile {
     display: none;
 }
 
+
 /***********************ABOUT***********************************************/
+
 .container-fluid-info {
     background: #8F8F8F url("../../img/purple/fon-main.jpg") no-repeat 50% 50% fixed;
     background-size: cover;
@@ -309,7 +429,9 @@ button.mobile {
     color: rgba(255, 255, 255, 1);
 }
 
+
 /***********************COMMUNITY***********************************************/
+
 .thumbnail {
     border-radius: 0;
     border: none;
@@ -337,7 +459,9 @@ button.mobile {
     cursor: pointer;
 }
 
+
 /***********************SPEAKERS***********************************************/
+
 .container-fluid-carousel {
     height: 450px;
 }
@@ -350,17 +474,17 @@ button.mobile {
     min-height: 200px;
 }
 
-#myCarousel .carousel-control.right, .carousel-control.left {
+#myCarousel .carousel-control.right,
+.carousel-control.left {
     background-image: none;
     text-shadow: none;
     color: rgba(255, 255, 255, 0);
-
 }
 
-#myCarousel .carousel-control.right:hover, .carousel-control.left:hover {
+#myCarousel .carousel-control.right:hover,
+.carousel-control.left:hover {
     background-image: none;
     color: #DCDCDC;
-
 }
 
 #myCarousel .carousel-indicators li {
@@ -384,10 +508,13 @@ button.mobile {
     font-style: normal;
 }
 
+
 /***********************PARTNERS***********************************************/
+
 .thumbnail-white {
     background-color: #fff;
 }
+
 
 /*.thumbnail {
     -webkit-filter: grayscale(100%);
@@ -407,6 +534,7 @@ button.mobile {
     filter: none;
 }*/
 
+
 /***********************TEAM CAROUSEL***********************************************/
 
 .container-fluid-carousel-big {
@@ -417,13 +545,7 @@ h1.text-center {
     height: 60px;
 }
 
-Rules
-Computed
-Animations
-Fonts
-element {
-
-}
+Rules Computed Animations Fonts element {}
 
 .container-fluid-carousel {
     /*height: 350px;*/
@@ -434,17 +556,17 @@ element {
     margin-top: 30px;
 }
 
-#quote-carousel .carousel-control.right, #quote-carousel .carousel-control.left {
+#quote-carousel .carousel-control.right,
+#quote-carousel .carousel-control.left {
     background-image: none;
     text-shadow: none;
     color: rgba(255, 255, 255, 0);
-
 }
 
-#quote-carousel .carousel-control.right:hover, #quote-carousel .carousel-control.left:hover {
+#quote-carousel .carousel-control.right:hover,
+#quote-carousel .carousel-control.left:hover {
     background-image: none;
     color: #DCDCDC;
-
 }
 
 #quote-carousel .carousel-indicators {
@@ -491,14 +613,16 @@ element {
     margin-right: 10px;
 }
 
+
 /***********************TEAM***********************************************/
+
 .container-fluid-team {
     background: url("../../img/purple/team.jpg") no-repeat 50% 50% fixed;
     -webkit-backdrop-filter: brightness(1.5) blur(10px);
     backdrop-filter: brightness(1.5) blur(10px);
     background-size: cover;
-
 }
+
 
 /***********************MAP***********************************************/
 
@@ -513,6 +637,7 @@ element {
     padding: 40px 0;
     text-align: center;
 }
+
 
 /***********************REG***********************************************/
 
@@ -532,7 +657,9 @@ element {
     margin: 190px auto 70px auto;
 }
 
+
 /***********************FOOTER***********************************************/
+
 .container-fluid-footer {
     background-color: #252424;
     bottom: 0;
@@ -557,146 +684,165 @@ element {
     color: rgba(255, 255, 255, 1);
 }
 
+
 /***********************MEDIA***********************************************/
 
-    @media (max-width: 768px) {
-        body {
-            font-size: 1rem;
-        }
-
-        h1, h2, h2, h4, p {
-            padding-bottom: 0.5rem;
-        }
-
-        h1 {
-            font-size: 2rem;
-        }
-
-        h2 {
-            font-size: 1.2rem;
-
-        }
-
-        h3 {
-            font-size: 1rem !important;
-        }
-
-        p {
-            line-height: 140%;
-        }
-
-        a#moreProgram {
-            font-size: 1.1rem;
-        }
-
-        .btn-center {
-            width: 220px !important;
-        }
-
-        .container-fluid-main {
-            padding-top: 60px;
-        }
-
-        .container-fluid-main p:first-child {
-            padding-bottom: 0;
-        }
-
-        .carousel-indicators {
-            display: none;
-        }
-
-        .btn-reg {
-            min-width: 220px;
-            margin: 190px auto 70px auto;
-        }
-
+@media (max-width: 768px) {
+    body {
+        font-size: 1rem;
     }
-
-    @media (max-width: 1062px) {
-        .navbar-header {
-            float: none;
-        }
-
-        .navbar-left, .navbar-right {
-            float: none !important;
-        }
-
-        .navbar-toggle {
-            display: block;
-        }
-
-        .navbar-collapse {
-            border-top: 1px solid transparent;
-            box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
-        }
-
-        .navbar-fixed-top {
-            top: 0;
-            border-width: 0 0 1px;
-        }
-
-        .navbar-collapse.collapse {
-            display: none !important;
-        }
-
-        .navbar-nav {
-            float: none !important;
-            margin-top: 7.5px;
-        }
-
-        .navbar-nav > li {
-            float: none;
-        }
-
-        .navbar-nav > li > a {
-            padding-top: 10px;
-            padding-bottom: 10px;
-        }
-
-        .collapse.in {
-            display: block !important;
-        }
+    h1,
+    h2,
+    h2,
+    h4,
+    p {
+        padding-bottom: 0.5rem;
     }
-
-    #quote-carousel .item blockquote p:before {
+    h1 {
+        font-size: 2rem;
+    }
+    h2 {
+        font-size: 1.2rem;
+    }
+    h3 {
+        font-size: 1rem !important;
+    }
+    p {
+        line-height: 140%;
+    }
+    a#moreProgram {
+        font-size: 1.1rem;
+    }
+    .btn-center {
+        width: 220px !important;
+    }
+    .container-fluid-main {
+        padding-top: 60px;
+    }
+    .container-fluid-main p:first-child {
+        padding-bottom: 0;
+    }
+    .carousel-indicators {
         display: none;
     }
+    .btn-reg {
+        min-width: 220px;
+        margin: 190px auto 70px auto;
+    }
+}
 
+@media (max-width: 1062px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-left,
+    .navbar-right {
+        float: none !important;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
+    }
+    .navbar-fixed-top {
+        top: 0;
+        border-width: 0 0 1px;
+    }
+    .navbar-collapse.collapse {
+        display: none !important;
+    }
+    .navbar-nav {
+        float: none !important;
+        margin-top: 7.5px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .collapse.in {
+        display: block !important;
+    }
+}
+
+#quote-carousel .item blockquote p:before {
+    display: none;
+}
+
+button.mobile {
+    display: none;
+}
+
+@media (max-width: 768px) {
+    button.full {
+        display: none;
+    }
     button.mobile {
-        display: none;
+        display: inline;
     }
-
-    @media (max-width: 768px) {
-        button.full {
-            display: none;
-        }
-
-        button.mobile {
-            display: inline;
-        }
-
-        .btn {
-            margin-top: 2rem;
-            height: 50px;
-            min-width: 220px;
-            color: #fff;
-            font-size: 1rem;
-            font-weight: 300;
-            background-color: #F9416D;
-            user-select: none;
-            outline: none;
-            border: none;
-            border-radius: 4px;
-            transition: 0.2s;
-            padding: 0;
-        }
-
-        .btn-block {
-            width: auto;
-        }
-
-        .btn {
-            margin: auto;
-            padding: 0;
-        }
+    .btn {
+        margin-top: 2rem;
+        height: 50px;
+        min-width: 220px;
+        color: #fff;
+        font-size: 1rem;
+        font-weight: 300;
+        background-color: #F9416D;
+        user-select: none;
+        outline: none;
+        border: none;
+        border-radius: 4px;
+        transition: 0.2s;
+        padding: 0;
     }
+    .btn-block {
+        width: auto;
+    }
+    .btn {
+        margin: auto;
+        padding: 0;
+    }
+}
+
+.breadcrumb>li+li:before {
+    font-size: 0.8rem;
+}
+
+.breadcrumb {
+    padding-top: 0;
+}
+
+.breadcrumb>li.active a {
+    color: #777;
+}
+
+.thumbnail-row {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.thumbnail-row_elm {
+    display: flex;
+    align-items: flex-start;
+}
+
+.thumbnail-btn {
+    text-decoration: none;
+    color: #000;
+    cursor: pointer;
+    margin: 0;
+    background: transparent;
+    padding: 0;
+    border: 0;
+    width: 100%;
+}
+
+.thumbnail-btn:focus {
+    outline: none;
+}
