--- a/_layouts/new_layout.html
+++ b/_layouts/new_layout.html
@@ -27,11 +27,11 @@
           <a class="brand" href="/new/index.html">Piter United</a>
         </h3>
         <ul class="nav nav-pills">
-          <li><a href="/new/communities.html">Сообщества</a></li>
+          <!-- <li><a href="/new/communities.html">Сообщества</a></li>
           <li><a href="/new/meetups.html">Митапы</a></li>
-          <li><a href="/new/initiative.html">Инициатива</a></li>
+          <li><a href="/new/initiative.html">Инициатива</a></li> -->
           <li>
-            <a class="btn btn-default" href="#">Войти</a></li>
+            <a class="btn btn-default subscribe" href="#">ПОДПИСАТЬСЯ</a></li>
           </li>
         </ul>
       </div>
@@ -67,13 +67,13 @@
         <div class="col-md-3">
           <h4><strong>Прочие ссылки</strong></h4>
           <ul class="list-unstyled">
-            <li><a href="">Блог Piter United</a></li>
+            <li><a href="https://medium.com/@piterunited" target="_blanc">Блог Piter United</a></li>
           </ul>
         </div>
         <div class="col-md-3">
           <h4><strong>Контакты</strong></h4>
           <ul class="list-unstyled">
-            <li><a href="">piterunited@gmail.com</a></li>
+            <li><a href="mailto:piterunited@gmail.com">piterunited@gmail.com</a></li>
           </ul>
         </div>
       </div>
