ITGM 11 (add sponsors, add organizer photos, fix styles)

--- a/css/red/style.css
+++ b/css/red/style.css
@@ -603,7 +603,7 @@ Rules Computed Animations Fonts element {}
     width: 128px;
     height: 128px;
     border-radius: 100px;
-    border-color: #A35DB4;
+    border-color: #FF6666;
     opacity: 1;
     overflow: hidden;
 }
